Implemented browsing through boards from pbn file

--- a/Tosr/Form1.resx
+++ b/Tosr/Form1.resx
@@ -94,4 +94,106 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="toolStripButtonFirst.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATKSURBVEhLldYJTFN3HAfwQsRGqSBK5Z6AI+oINVOQS5kg
+        U+JkTJQjBg9katxgxiljwA5whAyDRgQzUVBOORVwgBqKIkcKrKKA4waBtrTQFsohN3z3b2VmhIfDX/JN
+        38vr+39+v9f3Xkr7b5ml9cI4SQjDRCGMSEySRGClibhzh5dcpskC2dzm/NpwR4SuKaBxFGgZBwrEM/j4
+        Fu+DgE3xfMHmBAHmdueXwQ0eqoeBiI5pXO2awfmGMRhGdy0ZWH+lTeD2SALLu4sB0Z3gDAHfN00gsHUK
+        X9e8gWFUx5IA7bBWwZlSCZrJ5Ka3uqgBvch2lBHgbOMEApon4c0dwUcRze8FDCIadXVCG3CyWATuAJm+
+        cwo64U3UwLrfW/BMBvi+GsP5vydwpHII68OaFgUMfm3UZQbV4sQjoWLxUNLY8ZpR6P3WQA1ohTaC3Q+c
+        fDEKv9pxeFbIoPdLPSVg4P9clxlQg2MFfJRJp+FHLqcHZxjHuaPQDa6jBjSD6/FYChzlvsGpmjG4lhAg
+        6MUCgHmhSlvDrxJh1VKy+Cx8qoZwqHQQbmWD8KoagY5/DTWw9oeXyJfM4nDlME4QxKWoH+v8n88DtM6U
+        e6idKkdIlRjsvml4ka5dnsjg+lSGg2wZDpUPQ+u7ampg9Tkucvtm4VY+BK+KETiRcdadrX4HaHgXuzOO
+        FePnij6we6fhXirDvqIBOLMHsJ9kH2nIhUyh+Q2HGlD7tgrZohlFR4fI7bQ7rw9MX0614pjnQ3c1ryIE
+        PxMhjT+Jg+Ty7S6QYG+hFHsevo0j2XZ6Moi1PiXUwKrTFUjrmcHex/34kiA774mw5lRFqdqBfCemDxvx
+        LUNI7B6HXaEEn5HF7Ul2ke1d+WRfnjwJHB7LoHG0mBpQ9X6KZN604gQ5YpkmhIZ3CZuxL6vbNJCDDOEE
+        tuWKsYPEjsSWxCZHDOucXkWs7vXCtkCK1Z6PqIGVXmzEdU/C+oEY9mTcbSkCqB8p4siPqXyeIjQ+W4KQ
+        V8PYkt0HC7KYRdbbmGeIsE2edBEscqVQc31ADazwfIjrryewNVsEG3L9WXE8aHgUvvuR6Y6p6dqHC+Fb
+        JsaW9F6w7gqxJVUI1lzMknvAyhJjlXPOIsBXfyKqYwym5ETzzF58cqML6gfy5t2mdIeUDDWXTPxYJcWm
+        FCE23xFgcwKffPKxSZ5UERh7s6gB+v5cRJD3tAk5Sd6RSUwHGM7ZCx40FfvEENUvMnG6qAcbyKt5w81u
+        GMd2w4jEOKEHqo6p1IAKkS82j8LoFg8bb/NhdKUNDKeFgLyU7eLdlazj4XO/ExvJJDrXXkM/phP6sQKs
+        sE9cBHDIQFA9edTJF41IV3rkrai6J4kSkJeyzW0PmmUsjmS3wzCJjzWkIeZ1Hug746mBZbuScK5uBGsv
+        d0CXIMyLDaDbLw4oyiJGm8aKhlX4XzDLEEI1sgvLrGOpASXbBJx8OQzGpTZoRrZB/ad60O3i3w/IyyZa
+        l8aKwo5wDkzuS0D7NJoaoFnFwYs7CPrFFjAiWrEyoBYq1nH/D8hre5Q+jXWZZxZYAdrWxYDtsfCsHYNy
+        WDuWX3qN5RfqoGz5x9KAf8v8ioBmeZ0aULa+qRhPSd7B1mugmcdAyeoDAXlZRc39baHR/gGyEkG7KkfA
+        TQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripButtonPrevious.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARjSURBVEhLtZV7TJV1HMZP4tqcP8OD1rG8DK3NSTatTJ0b
+        ZlqmpTYrSy215XKKytHEAE0lEYEphoFT02ZhdFFXVl7SkbdQ8QYmCgRDGIQHzuGc99xvXD59D9Gy8h+3
+        47O9++39432e5/18v3tf3d1IbbCj0jQ6b8Mrleage7qFyPVN4Q9QKzSi1pl5vcDBkJ228AaoZAf3LTGR
+        fTPAZw2tGDY1hy9ArbKjS2hku5ibA5Bc4qNnmiU8ASrJQURyEztqgzj9UONqZ0GRF5UQhhmotQ66rjGT
+        Vx/E5oNrllYOC56ll3xE77Ch/8hK7ywbvTKs9NzYjD5Fhr/aTKSE91hmQhlNPPSBnLNr/19Gpbg6tuVg
+        UwuaNC9qaiX1RoCEq34SSwLkVgU7kGWU+1l73U9CiZfFl73MK3Lzxik30wtcTC1wMyRfCLxY/O8Aleqm
+        R7rVW2BpQ5PmIfONN4IkXw2w/LKfpRd9HJK3Kmtuo7ApyMmGAEfqAhyo8ZNX5SO33Ed2hYf551xE5zmJ
+        mFjyT4BKdxO1qbH9tPUv83NinlEWJEXMU37zs7LYz4LzXuLOyiXnnDMuZpxw89IxJ88fchB70MFT+zWG
+        5WsM2GXDsM1OxKTOALXFS/9dGpcc7Vi8SLtWMsuDbBA0664FSBLz+As+3j3nZdYpD1OPuRl/yMW4H5yM
+        2u/kScERs1fjUfEYsM3KI7lWHs6x0mWCBKhPXIw84KDSA40uOG1qZXN5iwQE2HA9wIfSfsVlHwul9Tu/
+        epl5Ujgfd/PCYSfjfnIyZr+DEV/ZeTxP47HdNgaEzHNtsgTNdHn2ggR87OLNIg81bqiwtbG9SswrgmR2
+        tJfBdrafL+3fOu3htV/cTDvmYvwRJ7HfOXjmWwfDvtQY8oXGwB1W+klzw1YrUZlmImLPdiLKdBErHM9Y
+        2tlb20KaNE8tFTQlfoyd7eee8TJD2k877mKitB8reEZL++HSPkbMQ+37C54+2RZ6bbbSfa0J3djC24Ys
+        uz/8a438+lZyKltYdUXQXPGxqEjYC5rZwn66DHXyUQ8TjroZc9DJiH1OYvKdDN5jZ+CndvoIGsMWK5FZ
+        Gt2S/kA35raAkNQajaGf29heHST1epBF530sEDQd7Qs8vHLU1cF+7PfC/RspJGgG79EYtLMTTZYFfYaZ
+        B9Kbuf/9anSj/hMQkkqSB7Y1s16GnCgb9LaYzy70MflHO6NzfmdUdiVPy/lETimDt1YwKK2afmvK6J1U
+        RlRCKd2NpXSLK0W3tBLdc3cICEmttNI3o5ElxV6WXAzw6gkfU352MjyrCsN7xW3R6xqITjLR31hH34Rq
+        DIl1PJhQhz6+Bn1cLSp0zatATaq4c0BIytiMIfUWcwo9zD3vZ4oMd2hWA2qZNAuXlFGYJt7iZfm2zCzy
+        M3SricjlN8MXEJKKb0LF1zNRNmjkPiv6RfXhDQhJLTShX9ZAzG4zhtWy3/dCarGZrrOq6Gm8B2/wt5T8
+        m1XcrbsI0On+BDxOgUyyCIWVAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButtonNext.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPoSURBVEhLtZR7TJV1GMfPXCsQCphpSKiFpZN1WZgrVGqx
+        uS6bmiahoxAoK7OsXMKqhflH1tQZjYtTm8Y0osARpaWExE0IECQQKgW5HjgdDocDvOdw7p+e94BY09xY
+        8GzPfu97/vh8v8/3+b1HM5G6N7mRwM3VjL1Oft2XY2RKRcJ+HObVWrNHJHhr7eSLqBPkGFzjIrdtPDu5
+        IuEnhuh2wg999qkRUSfYrXPTaIF8nfWqSNwNRBYd6yf4oJ6gDN1op/UyO7WXwJQeZn/WQ+DnWgL3dnP7
+        nk4WpnXzbqeLxFYnxYNuioxOlvys3FjkrsMGjvXYydU7yNZJ9zrI0tnJ6rXJ7zaOam1kdtv4sstKapuN
+        ty45SLhgJ6beyo5mC6clrnGR68UVlm1QzpvhkhUuyOhN0o3y3qBA3TDUDEHlIFRJf9/nIl7g8b/ZiKqx
+        srJqxCOi9vxvTdcXCcnoVD7qcpKuhz09bj7WukjudJPcLlG0udjWYueNiw42NzuIb7Cx4byV6JoRnq22
+        sKLU4nEfUa78t8i8tDYlSXLdq4OdXW4+kOekyy7eaXF4wK8024mrF/A5K+uqR1hdY+HpsxaeKDHz2BkF
+        9dtQwVdEHjnU4RHxjS0fFZm7q1VJvOxkl9bNe+I6qdXB2wLe8rvAG+3EStbREscaga+qGGFFmZnHixTC
+        C4YJOzHM/XmDhOQOEHCkf1xk2cFREc8kc3a2KG/+6eDDdjfbZIEqeJOA4yTnDbVW1koUKyWSJ8vF9S8K
+        SwsUFp8UcP4gC3JNzP3aSOBRI/6H+9Ds7iRUxK+IeG5W0I6LystNNra3uHhN4lBzjq2z8vw5ieNXiUPA
+        kRJHhMTx8E/DPPDdIAuPmwj5ZoAgueIzjhjwPSTwFD2aDD3LTpm4O7Ee3xfHIgp4v1mJqR/h9T+cxNba
+        xuKw8EyFLFHgEeLoUYnjoZNDhB4fZH72AMFf9TMzsx+/Lwx47RfwJx1MEyH1nLmxWPL/x5L9tzco0eI2
+        ocnO+jobq2WZT0nWkWUWlhebWXxKkTiGuCdviHkCv0PAahzeAp6WqkPzaQe3ZMoEAp8VV3LtNZ2xtY7l
+        +QNEFppZKi6X5Jt4MMdEaLaRBZkGQgR25wE9s+QrD0jvxedAHzen/4Vmn1bg7dyaZbwKj6v4N1wt//hK
+        fGPK8VlfKl2MT1QJ06OKmP7cGbzXFcpZiNfaArzXFOAVU4Zmv7iVvw0VHiT7UE8V7pdQeS18onXTC7K4
+        fQIXgTl54lzg/i9VoYku+f9wT8k0mhQti06POp9cuFoCCy9VPHC/SYerpQJV55umAq6WQAO3yDKnBK6W
+        Cp4QXKP5G+ntcWNMFPkbAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButtonLast.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATcSURBVEhLlZZ7TJNXGMb5e5BJARFb0qAoCiMyN92MwRkj
+        lxnLlqmAbHJTiMAw6JRtXoBtYiZkmAEONufMBoKATC5S0HKTAnL7AggColCEllILbWlLCy3gs1P8YjD7
+        IPgkb9rvfOe8v+c95/Scmi2WB185SX9dsdwLZdQHuWNwzZbC9Z9REhJ8dHMU9Os35SFQYjdfOUo/rkhu
+        WWKqQWWEzPgSUsM8NACcrw0zA3ZXKOBxT4FdJdIVQ1yuj1CC8RlkyQzIJvGvcg6b0gaZAdvuyDExOw9e
+        tQLbC1YGcc4QUdUEkCI2ImV4BpnyWWxOecYM2ELm0lRmp3YO+8rl+JDM5c7cYTb9mlEb0wYpgXwaSc9n
+        8AuJdJkRG5OeMANcyAKZACkSA/r0s/AokuH9P0ew9frSkA1J/VSFTI9E0TR+JpEyaoRjYg8zYPO1EYwZ
+        XuIyKfUycdOomcWeAjFc04ewNZ0Z4pD4mLor1SH+mR4JT/W4NGzA+rguZoDTbyJISAUXh6aRTOISiTYy
+        XeG1cmxKfgqX5CE7uutrOSR0U0USPb7r1eFs3xQSSBUOZzuYAY6pAxiZmUf8wDQSB/T4kbg6T1w1Ts4i
+        uFK2ULpzUo8/3X1B3HMdVKFYh1PdU/imW4vvSX/umTZmwLqkfohm5hDbp0dcvx4Xnphc6XC6V4tastcD
+        +VKsi3sEp5+6/OghZpzYVirv+RQi2jWIInGyRwf76GZmADexF4PTc4h5rEVszxTOmOLxFHGnxdePtMiW
+        GnC4RAL72DY4XqAWIOxTTa3ZIi1CWtU42qbG8S4dOBH1zAD7hG481c8jslODGJLwRIcW0R2vnEVQGpJA
+        gzSyLr/2qGF/shmOZ1o+tY0SCm8MaOD/cBIBJIIoLdjhD5gB7HOd6NXNIZS4OU4ShlNqhBFXR8mzqS24
+        WY0jJGJJRRu+bQP3ROPImrAHVX/0a+BTp8QBEr5NGqwNrWYG2MW2o2tqFgFNkwvJgsjnV7Szww0qBJA2
+        XrUKnKiHxGX9mGmMTUhV09U+NTwrFdhXOQGeUI21RyqYAbYxzegg2/Jz4sSPJPStV+GgUPkqGtRwz5GA
+        E1kPboQwjx5ixvpSQKX2TsK9fAJ7+OPYW6XCGn8+M8AmsgEtmjl4VyngU6MEr0aB/eRc4tWp8PHfYnBC
+        q2AfXptPd18Qy7+cSupSYXuRHDuKX2BnuQKrD5UuAQirg5Ds+U8qxuEpmIDHfQU8a1RwyxgCO/A+OMeq
+        f6C7vpblgRLqYqcS7+XL4FYwBrfiCdh8docZYBVUjdpJI7YRJ7vKxrG7UgnH+E6wyZyyQwWv9/5irfIp
+        os5TSjhkjcKJHI4bC8ZhvT+PGWAZIECFwoAtt8ewg6/A+nPtsAsgyQPvvfHrXSyL/YXU6ZYJ2F2TgPuX
+        GNybMlh65ywB8OWjRGHEhlwZONGNZLHKsDq47H/nz2JZeN2iohrHwcoYhl3mc9hel8LS6yYzYNWhu8gi
+        N5JlUBVsfUthfbh42bvApHf2ZlHHhHJYXBHBOnUIVplisLyWqMDGrxQOpxpg7VMstvqi3J5uXlbmBBBS
+        9wLmVwbBShWB9fsygNW+JXj34O23uvTN9+ZQ4a1KmF8deZX8xhhY3rnMAGte4Vv/bbHk3aIsPHPIvOcs
+        ODclZ/HyaYCZ2X8/lXmYQLgtUwAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
