Added system parameters and optimization parameters

--- a/Tosr/Form1.resx
+++ b/Tosr/Form1.resx
@@ -124,49 +124,49 @@
   <data name="toolStripButtonPrevious.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAARjSURBVEhLtZV7TJV1HMZP4tqcP8OD1rG8DK3NSTatTJ0b
-        ZlqmpTYrSy216eYUlaN5DNBUElBYYig4NW0WRhd1ZeUlHXkLFa+YKBAMYRAeOYdz3nO/cfn0PUTLyn/c
-        js/27rf3j/d5nvfz/e59dfcile5AZWh03EZWKsNJ1w1Wotc1Rj5ALdeIWWvhzUIng3bYIxugUpw8sNhM
-        zs0gnzW0YPi4KXIBaqUDnek228TcEoSUEj/dM6yRCVDJTqJSGtleG8IVgBp3G/OLfShTBGag1jjpvNpC
-        fn0Iux+uWVs4JHiWXPQTu92O/iMbPbPt9Mi00X19E/pUGf4qC9ES3m2pGWU088gHcs6s/X8Zlepu35YD
-        jc1o0ry4sYW0G0FMVwMklQTJqwq1I8ssD7DmegBTiY9Fl3zMKfbw1kkPUwvdTC70MKhACLx85d8BKs1D
-        t3Sbr9DaiibNw+brb4RIuRpk2aUASy74OShvVdbUSlFjiBMNQQ7XBdlfEyC/yk9euZ+cCi/zzrqJzXcR
-        Nb7knwC1wUNMZkPbKdtf5mfFPLMsRKqYp/4WYMWVAPPP+Ug4I5ecs067mXbcwytHXbx40En8ASfP7NMY
-        UqDRb6cdw1YHURM6AtQmH313alx0tmH1Ie1ayCoPkS5o1l4Lkizmief9zD3rY8ZJL5OPehh70M2YH1yM
-        2OfiacERt0fjcfHot9XGY3k2Hs210WmcBKgtbobvd1LphdtuOGVuYWN5swQESb8e5ENpv/ySnwXS+r1f
-        fUw/IZyPeXjpkIsxP7kYtc/JsK8cPJmv8cQuO/3C5nl2WYImOj1/XgI+cfN2sZcaD1TYW9lWJeYVIbLa
-        28tgO9rPk/bvnPLyxi8ephx1M/awi/jvnDz3rZMhX2oM+kKj/3YbfaS5YbONmCwLUfFnOhBluYkXjqet
-        beypbSZDmqeVCpqSAMaO9rNP+5gm7accczNe2o8WPCOl/VBpHyfm4fZ9BU+vHCs9NtrousaMbnTRHUOW
-        3R/6tUZBfQu5lc2svCxoLvtZWCzsBc1MYT9VhjrxiJdxRzyMOuBi2F4XcQUuBu520P9TB70EjWGTjehs
-        jS7Jf6AbdUdAWGq1xuDP7WyrDpF2PcTCc37mC5r29oVeXjvibmc/+nvh/o0UEjQDd2sM2NGBJtuKPtPC
-        QxuaePD9anQj/hMQlkqWB7Y2sU6GnCQb9K6YzyzyM/FHByNzf2dETiXPyvlUbikDN1cwIKOaPqvL6Jlc
-        RoyplK7GUroklKJbUonuhbsEhKVW2OideZvFV3wsvhDk9eN+Jv3sYmh2FYa5F1tj1zYQm2ymr7GO3qZq
-        DEl1PGyqQ59Ygz6hFhW+5lSgJlTcPSAsZWzCkHaLWUVeZp8LMEmGOzi7AbVUmkVKyihMk27xqnxbphcH
-        GLzZTPSym5ELCEslNqIS6xkvGzR8rw39wvrIBoSlFpjRL20gbpcFwyrZ7/shtchC5xlVdDfehzf4W0r+
-        zSrh1j0E6HR/AvnHgT2hslpjAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAARhSURBVEhLtZV7TJV1HMZP4dqcP8Oj1rG8DK3NSTatTJ0b
+        ZlqmpTYrSy215eYUlaN5DNAUElFYYhg4NW0WRhd1ZeUlHXkLFa+oKBAMYRAeObf33G9cPn0P0bLyH7fj
+        s7377f3jfZ7n/Xy/e1/d3UitdaIyNTpuoyuV6aLLeiuxa5qiH6CWaXRPs/BGkYtB2xzRDVCpLu5bZCb3
+        RojPG1swfGyLXoBa4URnusUWMbeEILU0QLdMa3QCVIqLmNQmttaFcQeh1tPGvBI/yhSFGajVLjqtslDQ
+        EMYRgKvWFg4InsXnA8RtdaD/yE7PHAc9sux0W2dDny7DX2khVsK7LjGjjGYe/kDOmXX/L6PSPe3bsq+p
+        GU2alzS1kHE9hOlykOTSEPnV4XZkWRVBVl8LYir1s/CCnzklXt487mVqkYfJRV4GFQqBly79O0BleOma
+        ZvcXWVvRpHnEfN31MKmXQyy9EGTxuQD75a3Kba0UN4U51hjiYH2IvbVBCqoD5FcEyK30Mfe0h7gCNzHj
+        S/8JUOu9sopX2k7Y/zI/LeZZ5WHSxTz9SpDll4LMO+Mn8ZRccs466WHaUS8vH3bzwn4XCftcPL1HY0ih
+        Rr/tDgybncRM6AhQG/303a5x3tWG1Y+0ayG7IsxaQZN2NUSKmCedDfDeaT8zjvuYfNjL2P0exvzoZsQe
+        N08JjvhdGo+JR7/Ndh7Nt/NInp37x0mA+tTD8L0uqnxwywMnzC1sqGiWgBBrr4X4UNovuxBgvrR+9zc/
+        048J5yNeXjzgZszPbkbtcTHsaydPFGg8vsNBv4h5vkOWwMb9z52VgE88vFXio9YLlY5WtlSLeWWY7Pb2
+        MtiO9nOl/dsnfLz+q5cphz2MPegm4XsXz37nYshXGoO+1Oi/1U4faW7YZKd7toWYhFMdiLI9JAjHk9Y2
+        dtU1kynNM8oETWkQY0f72Sf9TJP2U454GC/tRwuekdJ+qLSPF/NI+76Cp1eulR4b7HRZbUY3uvi2Icvu
+        D/1Go7ChhbyqZlZcFDQXAywoEfaCZqawnypDnXjIx7hDXkbtczNst5v4QjcDdzrp/5mTXoLGsNFObI5G
+        55Q/0I26LSAitUpj8BcOttSEybgWZsGZAPMETXv7Ih+vHvK0sx/9g3D/VgoJmoE7NQZs60CTY0WfZeHB
+        9TYeeL8G3Yj/BESkUuSBzTbWyJCTZYPeEfOZxQEm/uRkZN7vjMit4hk5n8wrY+CmSgZk1tBnVTk9U8rp
+        biqji7GMzoll6BZXoXv+DgERqeV2emfdYtElP4vOhXjtaIBJv7gZmlONYcqx1ri0RuJSzPQ11tPbVIMh
+        uZ6HTPXok2rRJ9ahItecStSEyjsHRKSMNgwZN5lV7GP2mSCTZLiDcxpRS6RZtKSMwjT5Jq/It2V6SZDB
+        m8zELr0RvYCIVFITKqmB8bJBw3fb0S9oiG5ARGq+Gf2SRuJ3WDCslP2+F1ILLXSaUU034z14g7+l5N+s
+        Em/eRYBO9yfqBYD7uyZf2QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButtonNext.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAPoSURBVEhLtZR7TJV1GMfPXCsQFJxpR0ItLJ2sy8JcoVKL
-        zXXZzDQJHYVAWZll5RJWLai1LlNnNBCnNo1pRIEjSksJiZsQIEggVHqU64ETHA4HeM/h3D897wGxprmx
-        4Nme/d73/PH5fp/v83uPZjx1Z3Ij2s3VjL5OfN2VY2JSRcJ+HOKlWotXJHhr7cSLqBPkGN1jItM3np5Y
-        kfBjg3S64Idex+SIqBPsMHhotEK+wXZFJO46IouP9BG8v4egDMNIp3czJ60bbWoXcz7rQvu5Hu2uTm7e
-        2c6i9E7eaneTeNFF8YCHIpOLpT8r1xe57aCRI10OcnucZBuku51kGRxkddvldzuH9XYyO+182WEjrcXO
-        6xecJJxzEFNvI6XZykmJa0zkWnGFZRuVsxa4YINzMnqTdKO8NyhQNwQ1g1A5AFXS3/e6iRd4/G92omps
-        rKoa9oqoveBb87VFQjJalPc7XOzpgZ1dHj7Su0lu95DcKlG0uNmmc/DqeSebm53EN9jZcNZGdM0wT1Vb
-        WVlq9bqPKFf+W2R+uk5Jklx3GeCDDg/vynPSJTdv6pxe8IvNDuLqBXzGxrrqYVbXWHn8tJVHSiw8dEpB
-        /TZU8GWRBw60eUX8Y8tHROZ9qFMSL7n4WO/hbXGddNHJGwLe8rvAGx3EStbREscagT9ZMczKMgsPFymE
-        FwwRdmyIu/MGCMntZ8ahvjGR5ftHRLyTzE3RKa/96eS9Vg/bZIEqeJOA4yTnDbU21koUqySSR8vF9S8K
-        ywoUlhwXcP4AC3PNzPvahPawicCDvWh2tBMq4pdFvDcrKOW88kKTne06Ny9LHGrOsXU2njkjcfwqcQg4
-        UuKIkDju/2mIe74bYNFRMyHf9BMkV3zmISP+BwSe2oMmo4flJ8zcnliP/3OjEU1/p1mJqR/mlT9cxNba
-        R+Ow8kSFLFHgEeLoQYnjvuODhB4dYEF2P8Ff9TErs4+AL4z47BXwJ21MESH1nLWxWPL/x5KnbW9QosVt
-        QpOD9XV2VssyH5OsI8usrCi2sOSEInEMckfeIPMFfouA1Th8BTwlzYDm0zZuypQJBD47ruTqazpzax0r
-        8vuJLLSwTFwuzTdzb46Z0GwTCzONhAjs1n09zJavfMaebvz29XLjnr/Q7NYLvJVpWaYr8LiKf8PVCoyv
-        xD+mHL/1pdLF+EWVMDWqiKlPn8J3XaGchfisLcB3TQE+MWVo9opb+dtQ4UGyD/VU4QEJlVfDx1s3PCuL
-        2y1wEZibJ84FHvh8FZrokv8P95ZMo0nVs/jkiPOJhaslsPBSxQsPmHC4WipQdb5pMuBqCVS7RZY5KXC1
-        VPC44BrN35a2cVFey5EzAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAPnSURBVEhLtZR7TJV1GMfPXCsQCpxpR0ItLJ2sy8JcoVKL
+        zXXZ1DQJHYVAWZll5RJWLag/ukyd0bg4tWlMIwocUVpKSNyEAEECodKjcud0OBzOgfcczv3T8x4Qa5qb
+        C57tt9/7nj8+n+f3fX7v0VxP3Z3agnZTHWOvE1/35JuYVEnEj8O83GD1SUK3NEy8RD1BvtEzLrllw8mJ
+        lUQeGaLbDT/0OydHop5gu95Liw2K9PbLkoRrSBYeGiB0r4GQbP3oyuxjVkYf2vReZn3Wi/bzHrQ7u7l1
+        RycLMrt5u9ND8nk3ZRYvpSY3i39Wri25Y7+RQ71OCgwu8vSy+lzk6p3k9jnkdwcHexzkdDv4sstOxkUH
+        b5xzkXTGSVyTnbQ2G8clrnHJ1eKKyDMqp61wzg5n5OitslrkvVmBxmGoH4IaC9TK+r7fQ6LAE39zEFNv
+        Z0XtiE+irnnfmq8uCcvWKR90uckywI5eLx/1eEjt9JLaLlFc9LBV5+S1sy42tblIbHaw/rSd2PoRnq6z
+        sbzC5us+qkr5b8ncTJ2SIrnu1MOHXV7ek+eUCx7e0rl84JfanCQ0CfiUnbV1I6yqt/HkSRuPlVt55ISC
+        +m2o4EuSh/Z1+CSB8VWjkjlpOiX5gpuPe7y8I12nnHfxpoA3/y7wFifxknWsxLFa4CurR1heaeXRUoXI
+        4mEijgxzb6GFsIJBph0YGJcs3Tsq8Z1ktghe/9PF++1etsoAVfBGASdIzusb7KyRKFZIJI9XSde/KCwp
+        Vlh0VMBFFuYXmJnztQntQRPB+/vRbO8kXOSXJL6bFZJ2Vnmx1cE2nYdXJA415/hGO8+ekjh+lTgEHC1x
+        REkcD/40zH3fWVhw2EzYN4OEyBWffsBI4D6BpxvQZBtYeszMnclNBD4/FlHAu21KXNMIr/7hJr7BMRaH
+        jaeqZYgCj5KOHpY4Hjg6RPhhC/PyBgn9aoAZOQMEfWHEb7eAP+lgiojUfcaGMsn/H0MO2NasxEq3Sa1O
+        1jU6WCXDfEKyjq60sazMyqJjisQxxF2FQ8wV+G0CVuPwF/CUDD2aTzu4KUdOIPCZCeVXXtPpWxpZVjRI
+        dImVJdLl4iIz9+ebCc8zMT/HSJjAbt9jYKZ85dOy+gjY08+NWX+h2dUj8HZuzjVdhidU/xuuVnBiDYFx
+        VQSsq5BVRkBMOVNjSpn6zAn815bIXoLfmmL8VxfjF1eJZrd0K38bKjxE5qHuKjwoqeZK+PXWDc/J4HYJ
+        XASzC6VzgQe/UIsmtvz/w30lp9Gk97Dw+GjnEwtXS2CRFYoPHjThcLVUoNr5xsmAqyVQ7WYZ5qTA1VLB
+        1wXXaP4GX9txRYVCon0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripButtonLast.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -196,4 +196,7 @@
         zo3JWbwcGmBi8h8ghnmUGKTj+wAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
 </root>
